# EngineerInnovationComp_HDU

./: .gitignore  CMakeLists.txt  QR_scanner.py  Qr.py  README.md  Usual.py  code_review.html  discrimination.py  divide.py  gongxun.html  line.py  main.py  main_final_1.py  task.py  test.py  uart.py  wifi_thread.py  window.py  zhijiao.py  zhuanpanConfirm.py
demo_python/: Camera.py  Car.py  Vision.py  main.py  main.sh  rknn.py  single_test.py  test.py
include/: Application.hpp  Camera.hpp  Detector.hpp  DoubleBuffer.hpp  Info.hpp  Protocol.hpp  Serial.hpp
src/: Application.cpp  Camera.cpp  Detector.cpp  Info.cpp  Serial.cpp  main.cpp
